tests/negative/test_sym_name_special.orb
fnc main () () {
    sym block:i32;
};